--- a/DATA/ms2_simulator/ms2_simulator.vbproj
+++ b/DATA/ms2_simulator/ms2_simulator.vbproj
@@ -137,9 +137,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoundEnergy.vb" />
-    <Compile Include="EnergyModel.vb" />
-    <Compile Include="Emulator.vb" />
+    <Compile Include="Emulator\BoundEnergy.vb" />
+    <Compile Include="Emulator\EnergyModel.vb" />
+    <Compile Include="Emulator\Emulator.vb" />
     <Compile Include="GA\EnergyDistribution.vb" />
     <Compile Include="GA\GA.vb" />
     <Compile Include="RTPrediction.vb" />
