--- a/DATA/ms2_simulator/test/test.vbproj
+++ b/DATA/ms2_simulator/test/test.vbproj
@@ -155,7 +155,7 @@
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Data_science\Graph\GraphTheory.vbproj">
       <Project>{203bc68f-a0cd-443a-ab62-4af4110f752f}</Project>
-      <Name>Graph</Name>
+      <Name>GraphTheory</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\gr\network-visualization\Datavisualization.Network\Network.GraphTheory.vbproj">
       <Project>{076315ee-b598-40dc-9280-c71cdf9b6a48}</Project>
@@ -164,6 +164,10 @@
     <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\gr\physics\physics.vbproj">
       <Project>{3291389c-ea87-4b33-a9a5-65a2d60ba3e2}</Project>
       <Name>physics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Assembly\assembly\assembly.vbproj">
+      <Project>{95f7d65e-9db1-4605-9fd3-25433277af88}</Project>
+      <Name>assembly</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\visual\KCF\KCF.Graph\KCF.Graph.vbproj">
       <Project>{c60416d4-b3e2-45e5-bfe0-90d5021647f9}</Project>
