--- a/Assembly/assembly/assembly.vbproj
+++ b/Assembly/assembly/assembly.vbproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ASCII\MGF\Ions.vb" />
+    <Compile Include="ASCII\MGF\MgfWriter.vb" />
     <Compile Include="ASCII\MSP\MspParser.vb" />
     <Compile Include="ASCII\MSP\Comments.vb" />
     <Compile Include="ASCII\MSP\MspData.vb" />
