--- a/DATA/MetaDNA/MetaDNA_visual/MetaDNA_visual.vbproj
+++ b/DATA/MetaDNA/MetaDNA_visual/MetaDNA_visual.vbproj
@@ -85,7 +85,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="keggKB.vb" />
+    <Compile Include="XML.vb" />
     <Compile Include="Algorithm.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
