--- a/DATA/MetaDNA/MetaDNA_visual/MetaDNA_visual.vbproj
+++ b/DATA/MetaDNA/MetaDNA_visual/MetaDNA_visual.vbproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7B4A6D81-24D4-481C-8B6B-3129136B57A0}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MZ.MetaDNA</RootNamespace>
-    <AssemblyName>MZ.MetaDNA</AssemblyName>
+    <RootNamespace>MetaDNA.visual</RootNamespace>
+    <AssemblyName>BioDeep.MetaDNA.Visual</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
@@ -19,7 +19,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>MZ.MetaDNA.xml</DocumentationFile>
+    <DocumentationFile>BioDeep.MetaDNA.Visual.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -28,7 +28,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>MZ.MetaDNA.xml</DocumentationFile>
+    <DocumentationFile>BioDeep.MetaDNA.Visual.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -48,7 +48,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\x64\Debug\</OutputPath>
-    <DocumentationFile>MZ.MetaDNA.xml</DocumentationFile>
+    <DocumentationFile>BioDeep.MetaDNA.Visual.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -57,7 +57,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\x64\Release\</OutputPath>
-    <DocumentationFile>MZ.MetaDNA.xml</DocumentationFile>
+    <DocumentationFile>BioDeep.MetaDNA.Visual.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>pdbonly</DebugType>
