--- a/MetaDNA/MetaDNA_visual/MetaDNA_visual.vbproj
+++ b/MetaDNA/MetaDNA_visual/MetaDNA_visual.vbproj
@@ -85,6 +85,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.vb" />
     <Compile Include="XML.vb" />
     <Compile Include="Algorithm.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
