--- a/DATA/XrefEngine/XrefEngine.vbproj
+++ b/DATA/XrefEngine/XrefEngine.vbproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChemOntClassify.vb" />
+    <Compile Include="ClassyfireInfoTable.vb" />
     <Compile Include="ClassyfireAnnotation.vb" />
     <Compile Include="FillClass.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
