update mysql model

--- a/DATA/PubChem.MySql/PubChem.MySql.vbproj
+++ b/DATA/PubChem.MySql/PubChem.MySql.vbproj
@@ -86,6 +86,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="mysql\synonym.vb" />
     <Compile Include="StorageProcedure.vb" />
     <Compile Include="mysql\compound.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
