cli tools for draw tic

--- a/Assembly/mz/mz.vbproj
+++ b/Assembly/mz/mz.vbproj
@@ -115,6 +115,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TIC.vb" />
     <Compile Include="mz.vb" />
     <Compile Include="Program.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
