--- a/Assembly/mz/mz.vbproj
+++ b/Assembly/mz/mz.vbproj
@@ -124,7 +124,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TIC.vb" />
-    <Compile Include="mz.vb" />
+    <Compile Include="Pipeline\mz.vb" />
+	   <Compile Include="Pipeline\mzplot.vb" />
     <Compile Include="Program.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
