split cli module

--- a/DATA/pubchem/pubchem.vbproj
+++ b/DATA/pubchem/pubchem.vbproj
@@ -117,6 +117,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CLI\DatabaseCLI.vb" />
+    <Compile Include="CLI\WebApi.vb" />
     <Compile Include="Program.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
