--- a/MetaDNA/MetaDNA/DESCRIPTION
+++ b/MetaDNA/MetaDNA/DESCRIPTION
@@ -9,5 +9,6 @@ Description: Identify unknown metabolite by metaDNA algorithm.
 License: MIT
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
-Suggests: VisualBasic.R
+RoxygenNote: 5.0.1
+Suggests:
+    VisualBasic.R
