--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -208,6 +208,8 @@
     <Compile Include="InChI\Extensions.vb" />
     <Compile Include="InChI\Components.vb" />
     <Compile Include="InChI\InChIKey.vb" />
+    <Compile Include="MetaLib\Formula\FormulaCompare.vb" />
+    <Compile Include="MetaLib\Formula\FormulaComposition.vb" />
     <Compile Include="MetaLib\Match\TreeSearch.vb" />
     <Compile Include="MetaLib\KEGGExtensions.vb" />
     <Compile Include="MetaLib\Match\MetaEquals.vb" />
