--- a/mzkit/mzkit.vbproj
+++ b/mzkit/mzkit.vbproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assembly.vb" />
+    <Compile Include="Formula.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
