--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -210,6 +210,7 @@
     <Compile Include="InChI\InChIKey.vb" />
     <Compile Include="MetaLib\Formula\FormulaScanner.vb" />
     <Compile Include="MetaLib\Formula\FormulaComposition.vb" />
+    <Compile Include="MetaLib\Match\SynonymIndex.vb" />
     <Compile Include="MetaLib\Match\TreeSearch.vb" />
     <Compile Include="MetaLib\KEGGExtensions.vb" />
     <Compile Include="MetaLib\Match\MetaEquals.vb" />
