--- a/DATA/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/DATA/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -143,6 +143,7 @@
     <Compile Include="GCMS\Vendors\brukerGCMS.vb" />
     <Compile Include="GCMS\Vendors\finniganGCMS.vb" />
     <Compile Include="GCMS\Vendors\shimadzuGCMS.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\ScanOfTPA.vb" />
     <Compile Include="MRM\RawFile.vb" />
     <Compile Include="MRM\Data\MRMPeakTable.vb" />
     <Compile Include="MRM\Data\Extensions.vb" />
