--- a/src/assembly/ProteoWizard.d/test/test.vbproj
+++ b/src/assembly/ProteoWizard.d/test/test.vbproj
@@ -174,12 +174,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
-      <Project>{FECCE1FD-E1D4-49E3-A668-60BB5E7AED99}</Project>
+    <ProjectReference Include="..\..\..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
+      <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>47-dotnet_Microsoft.VisualBasic</Name>
     </ProjectReference>
     <ProjectReference Include="..\ProteoWizard.d.vbproj">
-      <Project>{A70CE8FD-3AFE-47B8-9958-CED1ACD720D9}</Project>
+      <Project>{a70ce8fd-3afe-47b8-9958-ced1acd720d9}</Project>
       <Name>ProteoWizard.d</Name>
     </ProjectReference>
   </ItemGroup>
