--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,4 @@ paket-files/
 /DATA/MetaDNA/MetaDNA/%APPDATA%/Microsoft/Windows/IETldCache
 /Assembly/Apps
 /App
+/Rscript/biodeep/biodeepdb_v3/Rscript/R/Library
