--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ paket-files/
 /Rscript/biodeep/biodeepdb_v3/Rscript/R/Library
 /Rscript/R/compound_brites/.R_logs
 /src/assembly/Apps
+/Rscript/biodeep/biodeepdb_v3/Rscript/R
